# flying-penguin

./: .gitignore  AUTHORS  CMakeLists.txt  INSTALL  README  README.markdown  engine.cfg
misc/cmake/: FindSFML.cmake
misc/windows/: flying-penguin-mingw.rc  flying-penguin.rc
proj/: flying-penguin.cbp
proj/linux/: flying-penguin  flying-penguin.desktop  installer
proj/linux/archlinux/: PKGBUILD
proj/linux/debian/: builder  control
scenes/: penguin.gd  penguin.scn  world1.scn
share/flying-penguin/: config  intro
share/flying-penguin/fonts/: FONT-INFO
share/flying-penguin/sprites/: arrow  bird  cloud  fish  penguin  puff  star  title
share/flying-penguin/string-styles/: alert  large  regular  shade-large  shade-regular
sprites/: penguin.tex
src/: apps.cpp  apps.hpp  background.cpp  background.hpp  clouds.cpp  config.h.in  entities.cpp  entities.hpp  fish.cpp  loops.cpp  loops.hpp  main.cpp  main.hpp  npc.cpp  npc.hpp  particles.cpp  particles.hpp  penguin.cpp  penguin.hpp  record.cpp  record.hpp  resources.cpp  resources.hpp  sol.cpp  sol.hpp  tween.hpp  util.cpp  util.hpp  world.cpp  world.hpp
